2012-03-21  Jens Hauke  <hauke@par-tec.com>

	* enhance: License with QPL

	* feature: test_nodes is now using libpscom

2011-12-02  Thomas Moschny <moschny@par-tec.com>	5.0.37-1

	* psm: share one progress engine (ipeek) with all
	connections. Greatly enhances performance e.g. for namd2.

	* Fix the initial state of receive requests from
	socket->default_recv.

	* Fix assertion test from _pscom_cancel_recv with ANY_SOURCE
	requests. Fixes two failing mpich2 tests.

	* Fix missing -ldl for openib_pp tools.

	* Fix compiler warnings in psofed.c and psoib.c.

2011-07-14  Jens Hauke  <hauke@par-tec.com>	-	5.0.36-1

	* feature: Native qlogic psm support

2011-06-01  Jens Hauke  <hauke@par-tec.com>	-	5.0.35-1

	* psoib: revert 5.0.34-1 error reporting.

2011-05-30  Jens Hauke  <hauke@par-tec.com>	-	5.0.34-1

	* Fix a race in ufd_poll.

	* Scaling fix: Increase default PSP_TCP_BACKLOG to 262144.

	* psoib: increased error reporting.

	* Fix PSP_DEBUG_OUT parsing with malformed file names.

	* enhance: Prefix debug output with the socket name (= mpi rank).

	* Fix receive request counting after termination of a broken
	connection. (Was false positive "deadlock detected")

	* enhance: pscom_debug: Use ssh. New option -p to use pssh.

2010-11-11  Jens Hauke  <hauke@par-tec.com>	-	5.0.33-2

	* psbuild for the git buildbots

2010-08-23  Jens Hauke  <hauke@par-tec.com>	-	5.0.33-1

	* Fix: p4ether: linearize rx skb. Fix bnx2 fragmented receive
	  skb's. (Corrupted messages with pscom over p4sock over bnx2)

	* feature: count and print pscom_probe, pscom_iprobe usage and
	  ANY_SOURCE receives when PSP_DEBUG_STATS=1 or PSP_DEBUG >= 2 is
	  set

	* feature: Iprobes without progress. Iprobe will iterate without
	  progress for PSP_IPROBE_COUNT iterations.

	* Fix p4s_setsockopt signature for kernel > 2.6.31.

	* Update p4ether for kernels > 2.6.28

	* change: Do not build linux kernel modules by default. Enable
	  modules with: "configure --with-kernel"
